tests/machine/x/scala/group_by_conditional_sum.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:2: error: identifier expected but ':' found.
  case class Auto1(cat: String, val: Int, flag: Boolean)
                                   ^
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:23: error: ':' expected but '}' found.
}
^
two errors found
